--- a/modules/health/locale/fr_FR.po
+++ b/modules/health/locale/fr_FR.po
@@ -54,7 +54,7 @@ msgctxt "field:contract.covered_element,is_health:"
 msgid "Is Health"
 msgstr "Santé"
 
-msgctxt "field:offered.coverage,is_health:"
+msgctxt "field:offered.option.description,is_health:"
 msgid "Is Health"
 msgstr "Santé"
 
@@ -110,7 +110,7 @@ msgctxt "model:tag,name:tag_health"
 msgid "Health"
 msgstr "Santé"
 
-msgctxt "selection:offered.coverage,family:"
+msgctxt "selection:offered.option.description,family:"
 msgid "Health"
 msgstr "Santé"
 
