--- a/modules/health_fr/locale/fr_FR.po
+++ b/modules/health_fr/locale/fr_FR.po
@@ -138,7 +138,7 @@ msgctxt "model:ir.ui.menu,name:menu_regime_form"
 msgid "Regimes"
 msgstr "Régimes"
 
-msgctxt "selection:offered.coverage,family:"
+msgctxt "selection:offered.option.description,family:"
 msgid "Health"
 msgstr "Santé"
 
