--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -87,7 +87,7 @@ msgctxt "error:extra_data:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
-msgctxt "error:offered.coverage:"
+msgctxt "error:offered.option.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
@@ -2655,135 +2655,135 @@ msgctxt "field:extra_data-sub_extra_data,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:offered.coverage,benefits:"
+msgctxt "field:offered.option.description,benefits:"
 msgid "Benefits"
 msgstr "Prestations"
 
-msgctxt "field:offered.coverage,clause_rules:"
+msgctxt "field:offered.option.description,clause_rules:"
 msgid "Clause Rules"
 msgstr "Clauses"
 
-msgctxt "field:offered.coverage,code:"
+msgctxt "field:offered.option.description,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:offered.coverage,complementary_data:"
+msgctxt "field:offered.option.description,complementary_data:"
 msgid "Offered Kind"
 msgstr "Typage"
 
-msgctxt "field:offered.coverage,complementary_data_def:"
+msgctxt "field:offered.option.description,complementary_data_def:"
 msgid "Complementary Data"
 msgstr "Données Complémentaires"
 
-msgctxt "field:offered.coverage,coverage_amount_rules:"
+msgctxt "field:offered.option.description,coverage_amount_rules:"
 msgid "Coverage Amount Rules"
 msgstr "Règles de Montant de Couverture"
 
-msgctxt "field:offered.coverage,coverages_in_package:"
+msgctxt "field:offered.option.description,coverages_in_package:"
 msgid "Coverages In Package"
 msgstr "Garanties de la Formule"
 
-msgctxt "field:offered.coverage,create_date:"
+msgctxt "field:offered.option.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:offered.coverage,create_uid:"
+msgctxt "field:offered.option.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:offered.coverage,currency:"
+msgctxt "field:offered.option.description,currency:"
 msgid "Currency"
 msgstr "Devises"
 
-msgctxt "field:offered.coverage,currency_digits:"
+msgctxt "field:offered.option.description,currency_digits:"
 msgid "Currency Digits"
 msgstr "Précision"
 
-msgctxt "field:offered.coverage,deductible_rules:"
+msgctxt "field:offered.option.description,deductible_rules:"
 msgid "Deductible Rules"
 msgstr "Franchises"
 
-msgctxt "field:offered.coverage,description:"
+msgctxt "field:offered.option.description,description:"
 msgid "Description"
 msgstr "Description"
 
-msgctxt "field:offered.coverage,document_rules:"
+msgctxt "field:offered.option.description,document_rules:"
 msgid "Document Rules"
 msgstr "Documents"
 
-msgctxt "field:offered.coverage,eligibility_rules:"
+msgctxt "field:offered.option.description,eligibility_rules:"
 msgid "Eligibility Rules"
 msgstr "Règles d'Eligibilité"
 
-msgctxt "field:offered.coverage,end_date:"
+msgctxt "field:offered.option.description,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
 
-msgctxt "field:offered.coverage,family:"
+msgctxt "field:offered.option.description,family:"
 msgid "Family"
 msgstr "Famille"
 
-msgctxt "field:offered.coverage,id:"
+msgctxt "field:offered.option.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.coverage,insurer:"
+msgctxt "field:offered.option.description,insurer:"
 msgid "Insurer"
 msgstr "Assureur"
 
-msgctxt "field:offered.coverage,is_package:"
+msgctxt "field:offered.option.description,is_package:"
 msgid "Package"
 msgstr "Formule"
 
-msgctxt "field:offered.coverage,item_desc:"
+msgctxt "field:offered.option.description,item_desc:"
 msgid "Item Descriptor"
 msgstr "Description du Risque"
 
-msgctxt "field:offered.coverage,name:"
+msgctxt "field:offered.option.description,name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:offered.coverage,pricing_rules:"
+msgctxt "field:offered.option.description,pricing_rules:"
 msgid "Pricing Rules"
 msgstr "Règles de Cotisation"
 
-msgctxt "field:offered.coverage,products:"
+msgctxt "field:offered.option.description,products:"
 msgid "Products"
 msgstr "Produits"
 
-msgctxt "field:offered.coverage,rec_name:"
+msgctxt "field:offered.option.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:offered.coverage,start_date:"
+msgctxt "field:offered.option.description,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
 
-msgctxt "field:offered.coverage,sub_document_rules:"
+msgctxt "field:offered.option.description,sub_document_rules:"
 msgid "Sub Document Rules"
 msgstr "Documents Eléments Couverts"
 
-msgctxt "field:offered.coverage,subscription_behaviour:"
+msgctxt "field:offered.option.description,subscription_behaviour:"
 msgid "Subscription Behaviour"
 msgstr "Comportement à la Souscription"
 
-msgctxt "field:offered.coverage,summary:"
+msgctxt "field:offered.option.description,summary:"
 msgid "Summary"
 msgstr "Synthèse"
 
-msgctxt "field:offered.coverage,template:"
+msgctxt "field:offered.option.description,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:offered.coverage,template_behaviour:"
+msgctxt "field:offered.option.description,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:offered.coverage,write_date:"
+msgctxt "field:offered.option.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:offered.coverage,write_uid:"
+msgctxt "field:offered.option.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3557,7 +3557,7 @@ msgctxt "model:extra_data-sub_extra_data,name:"
 msgid "Complementary Data recursive relation"
 msgstr "Données Complémentaires Récursives"
 
-msgctxt "model:offered.coverage,name:"
+msgctxt "model:offered.option.description,name:"
 msgid "Coverage"
 msgstr "Garantie"
 
@@ -4432,39 +4432,39 @@ msgctxt "selection:extra_data,type_:"
 msgid "Selection"
 msgstr "Sélection"
 
-msgctxt "selection:offered.coverage,family:"
+msgctxt "selection:offered.option.description,family:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:offered.coverage,family:"
+msgctxt "selection:offered.option.description,family:"
 msgid "Life"
 msgstr "Prévoyance"
 
-msgctxt "selection:offered.coverage,kind:"
+msgctxt "selection:offered.option.description,kind:"
 msgid "Insurance"
 msgstr "Assurance"
 
-msgctxt "selection:offered.coverage,subscription_behaviour:"
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Mandatory"
 msgstr "Obligatoire"
 
-msgctxt "selection:offered.coverage,subscription_behaviour:"
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Optional"
 msgstr "En Option"
 
-msgctxt "selection:offered.coverage,subscription_behaviour:"
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Proposed"
 msgstr "Proposé par Défaut"
 
-msgctxt "selection:offered.coverage,template_behaviour:"
+msgctxt "selection:offered.option.description,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:offered.coverage,template_behaviour:"
+msgctxt "selection:offered.option.description,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:offered.coverage,template_behaviour:"
+msgctxt "selection:offered.option.description,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4720,23 +4720,23 @@ msgctxt "view:extra_data-sub_extra_data:"
 msgid "Relations"
 msgstr "Relations"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Benefits"
 msgstr "Prestations"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Clause"
 msgstr "Clause"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Deductible"
 msgstr "Franchise"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Documents"
 msgstr "Documents"
 
