--- a/modules/life_product/locale/fr_FR.po
+++ b/modules/life_product/locale/fr_FR.po
@@ -22,11 +22,11 @@ msgctxt "field:offered.item.description,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:offered.coverage,coverage_amount_rules:"
+msgctxt "field:offered.option.description,coverage_amount_rules:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,is_coverage_amount_needed:"
+msgctxt "field:offered.option.description,is_coverage_amount_needed:"
 msgid ""
 msgstr " "
 
@@ -166,11 +166,11 @@ msgctxt "model:salary_range.version,name:"
 msgid "Tranche Version"
 msgstr ""
 
-msgctxt "selection:offered.coverage,family:"
+msgctxt "selection:offered.option.description,family:"
 msgid "Life"
 msgstr "Prévoyance"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Coverage Amount"
 msgstr "Montant de Couverture"
 
