--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -6,7 +6,7 @@ msgctxt "error:extra_data:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
-msgctxt "error:offered.coverage:"
+msgctxt "error:offered.option.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
@@ -215,107 +215,107 @@ msgctxt "field:extra_data-sub_extra_data,write_uid:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,code:"
+msgctxt "field:offered.option.description,code:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,company:"
+msgctxt "field:offered.option.description,company:"
 msgid "Company"
 msgstr "Société"
 
-msgctxt "field:offered.coverage,complementary_data:"
+msgctxt "field:offered.option.description,complementary_data:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,complementary_data_def:"
+msgctxt "field:offered.option.description,complementary_data_def:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,coverages_in_package:"
+msgctxt "field:offered.option.description,coverages_in_package:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,create_date:"
+msgctxt "field:offered.option.description,create_date:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,create_date_:"
+msgctxt "field:offered.option.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:offered.coverage,create_uid:"
+msgctxt "field:offered.option.description,create_uid:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,currency:"
+msgctxt "field:offered.option.description,currency:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,currency_digits:"
+msgctxt "field:offered.option.description,currency_digits:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,description:"
+msgctxt "field:offered.option.description,description:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,end_date:"
+msgctxt "field:offered.option.description,end_date:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,id:"
+msgctxt "field:offered.option.description,id:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,is_package:"
+msgctxt "field:offered.option.description,is_package:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,kind:"
+msgctxt "field:offered.option.description,kind:"
 msgid "Coverage Kind"
 msgstr "Type de Garantie"
 
-msgctxt "field:offered.coverage,must_expand_tree:"
+msgctxt "field:offered.option.description,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:offered.coverage,name:"
+msgctxt "field:offered.option.description,name:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,products:"
+msgctxt "field:offered.option.description,products:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,rec_name:"
+msgctxt "field:offered.option.description,rec_name:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,start_date:"
+msgctxt "field:offered.option.description,start_date:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,subscription_behaviour:"
+msgctxt "field:offered.option.description,subscription_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,summary:"
+msgctxt "field:offered.option.description,summary:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,template:"
+msgctxt "field:offered.option.description,template:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,template_behaviour:"
+msgctxt "field:offered.option.description,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,write_date:"
+msgctxt "field:offered.option.description,write_date:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.coverage,write_uid:"
+msgctxt "field:offered.option.description,write_uid:"
 msgid ""
 msgstr " "
 
@@ -680,7 +680,7 @@ msgctxt "model:extra_data-sub_extra_data,name:"
 msgid ""
 msgstr " "
 
-msgctxt "model:offered.coverage,name:"
+msgctxt "model:offered.option.description,name:"
 msgid ""
 msgstr " "
 
@@ -772,35 +772,35 @@ msgctxt "selection:extra_data,type_:"
 msgid "Selection"
 msgstr "Sélection"
 
-msgctxt "selection:offered.coverage,kind:"
+msgctxt "selection:offered.option.description,kind:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:offered.coverage,kind:"
+msgctxt "selection:offered.option.description,kind:"
 msgid "Default"
 msgstr "Défaut"
 
-msgctxt "selection:offered.coverage,subscription_behaviour:"
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Mandatory"
 msgstr "Obligatoire"
 
-msgctxt "selection:offered.coverage,subscription_behaviour:"
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Optional"
 msgstr "En Option"
 
-msgctxt "selection:offered.coverage,subscription_behaviour:"
+msgctxt "selection:offered.option.description,subscription_behaviour:"
 msgid "Proposed"
 msgstr "Proposé par Défaut"
 
-msgctxt "selection:offered.coverage,template_behaviour:"
+msgctxt "selection:offered.option.description,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:offered.coverage,template_behaviour:"
+msgctxt "selection:offered.option.description,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:offered.coverage,template_behaviour:"
+msgctxt "selection:offered.option.description,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -876,11 +876,11 @@ msgctxt "view:extra_data-sub_extra_data:"
 msgid "Relations"
 msgstr "Relations"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Complementary Data"
 msgstr "Données Complémentaires"
 
-msgctxt "view:offered.coverage:"
+msgctxt "view:offered.option.description:"
 msgid "Coverages"
 msgstr "Garanties"
 
