--- a/modules/property_product/locale/fr_FR.po
+++ b/modules/property_product/locale/fr_FR.po
@@ -2,6 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "selection:offered.coverage,family:"
+msgctxt "selection:offered.option.description,family:"
 msgid "Property & Casualty"
 msgstr "IARD"
