--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -2924,35 +2924,35 @@ msgctxt "field:offered.offered,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:offered.package-coverage,coverage:"
+msgctxt "field:offered.package-option.description,coverage:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "field:offered.package-coverage,create_date:"
+msgctxt "field:offered.package-option.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:offered.package-coverage,create_uid:"
+msgctxt "field:offered.package-option.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:offered.package-coverage,id:"
+msgctxt "field:offered.package-option.description,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.package-coverage,package:"
+msgctxt "field:offered.package-option.description,package:"
 msgid "Package"
 msgstr "Formule"
 
-msgctxt "field:offered.package-coverage,rec_name:"
+msgctxt "field:offered.package-option.description,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:offered.package-coverage,write_date:"
+msgctxt "field:offered.package-option.description,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:offered.package-coverage,write_uid:"
+msgctxt "field:offered.package-option.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3573,7 +3573,7 @@ msgctxt "model:offered.offered,name:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "model:offered.package-coverage,name:"
+msgctxt "model:offered.package-option.description,name:"
 msgid "Link Package Coverage"
 msgstr "Lien Formule Garantie"
 
